--- a/index.html
+++ b/index.html
@@ -177,10 +177,23 @@
     </section>
     <section class="discoProc">
         <div class="container">
-            <div>
-                <div></div>
-                <div></div>
-                <div></div>
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
+                    <h3>Discovering the process</h3>
+                </div>
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
+                    <div class="slogan">Lorem ipsum dolor sit amet consectetur adipiscing elit</div>
+                </div>
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
+                    <div class="videoContainer">
+                        <video controls="controls" preload="metadata">
+                            <source src="../video/process.mp4" />
+                            <source src="../video/process.ogv" />
+                            <source src="../video/process.webm" />
+
+                        </video>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
