--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </button>
                 <!-- Logo -->
                 <a class="navbar-brand" href="#">
-                    <img alt="Brand" src="../images/MYH_finewines_Logo.png">
+                    <img alt="Brand" src="images/MYH_finewines_Logo.png">
                 </a>
             </div>
 
@@ -57,7 +57,7 @@
     <section id="mainSlider">
         <div class="master-slider" id="masterslider">
             <div class="ms-slide" data-fill-mode="fill">
-                <img src="../images/slider.jpg" data-src="../images/slider.jpg" alt="lorem ipsum dolor sit" />
+                <img src="images/slider.jpg" data-src="images/slider.jpg" alt="lorem ipsum dolor sit" />
                 <!-- slide text layer -->
                 <div class="ms-layer ms-caption" style="top:10px; left:30px;">
                     Lorem ipsum dolor sit amet
@@ -66,7 +66,7 @@
             </div>
             <div class="ms-slide" data-fill-mode="fill">
                 <!-- slide background -->
-                <img src="../images/slider.jpg" data-src="../images/slider.jpg" alt="lorem ipsum dolor sit" />
+                <img src="images/slider.jpg" data-src="images/slider.jpg" alt="lorem ipsum dolor sit" />
                 <div class="ms-layer ms-caption" style="top:10px; left:30px;">
                     Lorem ipsum dolor sit amet
                 </div>
@@ -88,7 +88,7 @@
             <div class="row">
                 <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
                     <div class="glass-img">
-                        <img src="../images/Burgundy.png" alt="Burgundy" width="226" height="429" />
+                        <img src="images/Burgundy.png" alt="Burgundy" width="226" height="429" />
                     </div>
                     <h3 class="glass-title">Burgundy</h3>
                     <div class="glass-param">
@@ -104,7 +104,7 @@
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
                     <div class="glass-img">
-                        <img src="../images/Bordeaux.png" alt="Bordeaux" />
+                        <img src="images/Bordeaux.png" alt="Bordeaux" />
                     </div>
                     <h3 class="glass-title">Bordeaux</h3>
                     <div class="glass-param">
@@ -119,7 +119,7 @@
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
                     <div class="glass-img">
-                        <img src="../images/Universal.png" alt="Universal" />
+                        <img src="images/Universal.png" alt="Universal" />
                     </div>
                     <h3 class="glass-title">Universal</h3>
                     <div class="glass-param">
@@ -134,7 +134,7 @@
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
                     <div class="glass-img">
-                        <img src="../images/White Wine.png" alt="White Wine" />
+                        <img src="images/White Wine.png" alt="White Wine" />
                     </div>
                     <h3 class="glass-title">White Wine</h3>
                     <div class="glass-param">
@@ -153,7 +153,7 @@
                     <div class="showMore">
                         <div class="showMore-text">Show more</div>
                         <div class="showMore-img">
-                            <img src="../images/arrow.png" alt="Show more" />
+                            <img src="images/arrow.png" alt="Show more" />
                         </div>
                     </div>
                 </div>
