--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </button>
                 <!-- Logo -->
                 <a class="navbar-brand" href="#">
-                    <img alt="Brand" src="../images/MYH_finewines_Logo.png">
+                    <img alt="Brand" src="images/MYH_finewines_Logo.png">
                 </a>
             </div>
 
@@ -47,29 +47,101 @@
                     </li>
                     <li><a href="#">CONTACT US</a></li>
                 </ul>
-            <div class="lang-cont">
+                <div class="lang-cont">
                     <a href="#" class="lang">ENGLISH</a>|
                     <a href="#" class="lang">中国</a>
-            </div>
+                </div>
             </div><!-- /.div collapse -->
         </div><!-- /.container-fluid -->
     </nav>
     <section id="mainSlider">
-        <div class="master-slider" id="masterslider">
-            <div class="ms-slide" data-fill-mode="fill">
-                <img src="../images/slider.jpg" data-src="../images/slider.jpg" alt="lorem ipsum dolor sit" />
+        <div class="master-slider" id="masterslider" data-height="fullscreen">
+            <div class="ms-slide">
+                <img src="images/slider.jpg" data-src="images/slider.jpg" alt="lorem ipsum dolor sit" />
                 <!-- slide text layer -->
-                <div class="ms-layer ms-caption" style="top:10px; left:30px;">
-                    Lorem ipsum dolor sit amet
-                </div>
+                    <img class="ms-layer" alt="Zalto"
+                         style="top:145px;left:256px;"
+                         data-type="image"
+                         data-src="images/zalto_slider.png"
+                         src="images/slider.jpg"
+                         />
+                <h2 class="ms-layer"
+                    style="top:172px;left:192px;"
+                    data-type="text"
 
+                    >HANDCRAFTED</h2>
+                <p class="ms-layer"
+                   style="top:270px;left:204px;"
+                    data-type="text"
+                    >PERFECTION ACHIEVED</p>
             </div>
-            <div class="ms-slide" data-fill-mode="fill">
+            <div class="ms-slide">
                 <!-- slide background -->
-                <img src="../images/slider.jpg" data-src="../images/slider.jpg" alt="lorem ipsum dolor sit" />
-                <div class="ms-layer ms-caption" style="top:10px; left:30px;">
-                    Lorem ipsum dolor sit amet
-                </div>
+                <img src="images/slider.jpg" data-src="images/slider.jpg" alt="lorem ipsum dolor sit" />
+                <img class="ms-layer" alt="Zalto"
+                     style="top:145px;left:256px;"
+                     data-type="image"
+                     data-src="images/zalto_slider.png"
+                     src="images/slider.jpg" />
+                <h2 class="ms-layer"
+                    style="top:172px;left:192px;"
+                    data-type="text">
+                    HANDCRAFTED
+                </h2>
+                <p class="ms-layer"
+                   style="top:270px;left:204px;"
+                   data-type="text">PERFECTION ACHIEVED</p>
+            </div>
+            <div class="ms-slide">
+                <!-- slide background -->
+                <img src="images/slider.jpg" data-src="images/slider.jpg" alt="lorem ipsum dolor sit" />
+                <img class="ms-layer" alt="Zalto"
+                     style="top:145px;left:256px;"
+                     data-type="image"
+                     data-src="images/zalto_slider.png"
+                     src="images/slider.jpg" />
+                <h2 class="ms-layer"
+                    style="top:172px;left:192px;"
+                    data-type="text">
+                    HANDCRAFTED
+                </h2>
+                <p class="ms-layer"
+                   style="top:270px;left:204px;"
+                   data-type="text">PERFECTION ACHIEVED</p>
+            </div>
+            <div class="ms-slide">
+                <!-- slide background -->
+                <img src="images/slider.jpg" data-src="images/slider.jpg" alt="lorem ipsum dolor sit" />
+                <img class="ms-layer" alt="Zalto"
+                     style="top:145px;left:256px;"
+                     data-type="image"
+                     data-src="images/zalto_slider.png"
+                     src="images/slider.jpg" />
+                <h2 class="ms-layer"
+                    style="top:172px;left:192px;"
+                    data-type="text">
+                    HANDCRAFTED
+                </h2>
+                <p class="ms-layer"
+                   style="top:270px;left:204px;"
+                   data-type="text">PERFECTION ACHIEVED</p>
+            </div>
+            <div class="ms-slide">
+                <!-- slide background -->
+                <img src="images/slider.jpg" data-src="images/slider.jpg" alt="lorem ipsum dolor sit" />
+                <img class="ms-layer" alt="Zalto"
+                     style="top:145px;left:256px;"
+                     data-type="image"
+                     data-src="images/zalto_slider.png"
+                     src="images/slider.jpg" />
+                <h2 class="ms-layer"
+                    style="top:172px;left:192px;"
+                    data-type="text">
+                    HANDCRAFTED
+                </h2>
+                <p class="ms-layer"
+                   style="top:270px;left:204px;"
+                   data-type="text">PERFECTION ACHIEVED</p>
             </div>
             <!-- end of slide -->
         </div>
@@ -88,7 +160,7 @@
             <div class="row">
                 <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
                     <div class="glass-img">
-                        <img src="../images/Burgundy.png" alt="Burgundy" width="226" height="429" />
+                        <img src="images/Burgundy.png" alt="Burgundy" />
                     </div>
                     <h3 class="glass-title">Burgundy</h3>
                     <div class="glass-param">
@@ -96,15 +168,15 @@
                         <div class="param">Volume:<span class="param-number">960mm</span></div>
                     </div>
                     <div class="description">
-                        <div class="generalDesc"></div>
-                        <div class="secenderyDesc"></div>
+                        <div class="generalDesc">For structured, elegant red and white wines with depth and persistence</div>
+                        <div class="secenderyDesc"><span class="desctitle">Especially for:</span>Pinot Noir, Nebbiolo, Barbera, as well as for full-bodied whites like Chardonnay or Grüner Veltliner</div>
                     </div>
 
                     <span class="swicher">View more</span>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
                     <div class="glass-img">
-                        <img src="../images/Bordeaux.png" alt="Bordeaux" />
+                        <img src="images/Bordeaux.png" alt="Bordeaux" />
                     </div>
                     <h3 class="glass-title">Bordeaux</h3>
                     <div class="glass-param">
@@ -112,14 +184,14 @@
                         <div class="param">Volume:<span class="param-number">765mm</span></div>
                     </div>
                     <div class="description">
-                        <div class="generalDesc"></div>
-                        <div class="secenderyDesc"></div>
+                        <div class="generalDesc">For full-bodied wines, supported by more tannins and extract</div>
+                        <div class="secenderyDesc"><span class="desctitle">Especially for:</span>Bordeaux, Rioja, Brunello, Cabernet Sauvignon, Merlotand Shiraz</div>
                     </div>
                     <span class="swicher">View more</span>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
                     <div class="glass-img">
-                        <img src="../images/Universal.png" alt="Universal" />
+                        <img src="images/Universal.png" alt="Universal" />
                     </div>
                     <h3 class="glass-title">Universal</h3>
                     <div class="glass-param">
@@ -127,14 +199,14 @@
                         <div class="param">Volume:<span class="param-number">530mm</span></div>
                     </div>
                     <div class="description">
-                        <div class="generalDesc"></div>
-                        <div class="secenderyDesc"></div>
+                        <div class="generalDesc">The versatile choice for both red and white fine wines</div>
+                        <div class="secenderyDesc"><span class="desctitle">Especially for:</span>Riesling, Chardonnay, Chianti and full-bodied whites without barrel maturation</div>
                     </div>
                     <span class="swicher">View more</span>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
                     <div class="glass-img">
-                        <img src="../images/White Wine.png" alt="White Wine" />
+                        <img src="images/White Wine.png" alt="White Wine" />
                     </div>
                     <h3 class="glass-title">White Wine</h3>
                     <div class="glass-param">
@@ -142,8 +214,69 @@
                         <div class="param">Volume:<span class="param-number">400mm</span></div>
                     </div>
                     <div class="description">
-                        <div class="generalDesc"></div>
-                        <div class="secenderyDesc"></div>
+                        <div class="generalDesc">For elegant, classical fruit forward white wines and medium-bodied red wines</div>
+                        <div class="secenderyDesc"><span class="desctitle">Especially for:</span>Sauvignon Blanc, Muskateller, Sangiovese, Rosè, Prosecco, Vintage Champagne</div>
+                    </div>
+                    <span class="swicher">View more</span>
+                </div>
+            </div>
+            <div class="row zaltoPart2">
+                <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
+                    <div class="glass-img">
+                        <img src="images/Champagne.png" alt="Champagne" />
+                    </div>
+                    <h3 class="glass-title">Champagne</h3>
+                    <div class="glass-param">
+                        <div class="param">Height:<span class="param-number">240mm</span></div>
+                        <div class="param">Volume:<span class="param-number">220mm</span></div>
+                    </div>
+                    <div class="description">
+                        <div class="generalDesc">For the noble, elegant sparkling wines of the world</div>
+                        <div class="secenderyDesc"><span class="desctitle">Especially for:</span>Champagne, Sparkling Wines, Spumante and Cava</div>
+                    </div>
+                    <span class="swicher">View more</span>
+                </div>
+                <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
+                    <div class="glass-img">
+                        <img src="images/Sweet Wine.png" alt="Sweet Wine" />
+                    </div>
+                    <h3 class="glass-title">Sweet Wine</h3>
+                    <div class="glass-param">
+                        <div class="param">Height:<span class="param-number">230mm</span></div>
+                        <div class="param">Volume:<span class="param-number">320mm</span></div>
+                    </div>
+                    <div class="description">
+                        <div class="generalDesc">For classic dessert wines, old Vintage Champagnes and barrel-aged distillates</div>
+                        <div class="secenderyDesc"><span class="desctitle">Especially for:</span>Sauternes, Ice Wine, Port, Sherry, Madeira and exclusive aged spirits like Single Malts or Cognac</div>
+                    </div>
+                    <span class="swicher">View more</span>
+                </div>
+                <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
+                    <div class="glass-img">
+                        <img src="images/Universal.png" alt="Universal" />
+                    </div>
+                    <h3 class="glass-title">Digestif</h3>
+                    <div class="glass-param">
+                        <div class="param">Height:<span class="param-number">210mm</span></div>
+                        <div class="param">Volume:<span class="param-number">140mm</span></div>
+                    </div>
+                    <div class="description">
+                        <div class="generalDesc">For fine, harmonious distillates or Liqueurs</div>
+                        <div class="secenderyDesc"><span class="desctitle">Especially for:</span>Fruit distillates, Grappa, Liqueurs and Bitters</div>
+                    </div>
+                    <span class="swicher">View more</span>
+                </div>
+                <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
+                    <div class="glass-img">
+                        <img src="images/White Wine.png" alt="White Wine" />
+                    </div>
+                    <h3 class="glass-title">Beer</h3>
+                    <div class="glass-param">
+                        <div class="param">Height:<span class="param-number">223mm</span></div>
+                        <div class="param">Volume:<span class="param-number">350mm</span></div>
+                    </div>
+                    <div class="description">
+                        <div class="generalDesc">For finely hopped Pilsner and Lager beers</div>
                     </div>
                     <span class="swicher">View more</span>
                 </div>
@@ -151,9 +284,11 @@
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <div class="showMore">
-                        <div class="showMore-text">Show more</div>
+                        <div class="showMore-textCont">
+                            <div class="showMore-text">Show more</div>
+                        </div>
                         <div class="showMore-img">
-                            <img src="../images/arrow.png" alt="Show more" />
+                            <img id="ShowMorePIC" src="images/arrow.png" alt="Show more" />
                         </div>
                     </div>
                 </div>
@@ -186,11 +321,10 @@
                 </div>
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
                     <div class="videoContainer">
-                        <video controls="controls" preload="metadata">
-                            <source src="../video/process.mp4" />
-                            <source src="../video/process.ogv" />
-                            <source src="../video/process.webm" />
-
+                        <video id="ProcVideo" controls>
+                            <source src="video/process.mp4" />
+                            <source src="video/process.ogv" />
+                            <source src="video/process.webm" />
                         </video>
                     </div>
                 </div>
@@ -198,29 +332,69 @@
         </div>
     </section>
     <section id="aboutBrad">
-
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
+                    <h3>About the brand</h3>
+                </div>
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
+                    <div class="aboutTxt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent augue orci, aliquam sit amet nisi a, luctus dignissim augue. Maecenas porttitor, enim sed malesuada pharetra, nunc justo faucibus massa, quis varius nulla mauris nec sapien. Donec ultrices tincidunt nibh semper rhoncus. Nulla ut finibus ligula. Pellentesque vitae lorem fermentum, mollis lacus nec, congue nibh. Nam lorem ligula, ultrices in lectus ut, tincidunt consectetur ligula</div>
+                </div>
+            </div>
+        </div>
     </section>
-    
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-5 col-md-5 col-sm-5 col-xs-5">
+                    <div class="foot-img">
+                        <img src="images/zalto denkart_no background_footer.png" alt="Zalto" />
+                        <img src="/images/MYH_finewines_Logo_footer.png" alt="MYH" />
+                    </div>
+                    <div class="foot-txt botMargin">Exclusive Importer and Distributor for Zalto<br /> in Hong Kong, Macau and Mainland China</div>
+                    <div class="foot-txt">© 2015 MYH Fine Wines Glassware. All rights reserved.</div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                    <div class="foot-cont-txt"><span style="font-family:'Raleway-Regular'">Hong Kong/Macau:</span><br />Ming Ying Hui (Hong Kong) Trading Ltd.<br /> 銘英會(香港)貿易有限公司</div>
+                    <div class="foot-cont-txt" style="margin-bottom:0;"><span style="font-family:'Raleway-Regular'">Mainland China:</span><br />Ming Ying Hui (Beijing) Trading Ltd.<br /> 銘英會(香港)貿易有限公司</div>
+                </div>
+                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
+                    <div class="foot-info-txt botMargin2">+86 158 1005 3940 (English)<br />+86 139 1173 2153(Mandarin/English)</div>
+                    <div class="foot-info-txt">sales@myhfinewines.com<br />www.myhfinewines.com</div>
+                </div>
+            </div>
+        </div>
+    </footer>
 
-    <!-- Java Script area -->
-    <script src="javascripts/custom.js"></script>
+
+
     <!-- Bootstrap core JS-------->
     <script src="javascripts/jquery-1.11.3.min.js"></script>
     <script src="javascripts/jquery-migrate-1.2.1.min.js"></script>
     <script src="javascripts/bootstrap.min.js"></script>
     <!-- Master slider core JS -->
     <script src="javascripts/masterslider.min.js"></script>
+    <!-- Java Script area -->
+    <script src="javascripts/custom.js"></script>
     <script>
         var winHeight = $(window).height(), sliderHeight;
 
-    sliderHeight = winHeight - 103
-    var slider = new MasterSlider();
-    slider.setup('masterslider' , {
-        space: 5,
-        fullwidth: true,
-        height: sliderHeight,
-        fillMode:'strech',
-    });
+        sliderHeight = winHeight - 103
+        var slider = new MasterSlider();
+        slider.setup('masterslider', {
+            space: 0,
+            fullwidth: true,
+            width:1280,
+            height: sliderHeight,
+            loop:true
+        });
+        slider.control('bullets', {
+            autohide: false, dir: "h",margin:30
+        })
+        slider.control('arrows', {
+            autohide:false
+        });
+
     </script>
 </body>
 </html>
