--- a/index.html
+++ b/index.html
@@ -377,15 +377,11 @@
     <!-- Java Script area -->
     <script src="javascripts/custom.js"></script>
     <script>
-        var winHeight = $(window).height(), sliderHeight;
-
-    sliderHeight = winHeight - 103
     var slider = new MasterSlider();
         slider.setup('masterslider', {
             space: 0,
-        fullwidth: true,
-            width:1280,
-        height: sliderHeight,
+            width:1352,
+            height: 520,
             loop:true
         });
         slider.control('bullets', {
