--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <form name="subscribe" id="subscribeForm">
-                        <input type="text" class="subInput" />
+                        <input type="text" class="subInput" placeholder="Enter your Email"/>
                         <input type="button" value="SUBSCRIBE" class="subBtn" />
                     </form>
                 </div>
@@ -325,7 +325,7 @@
                 </div>
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
                     <div class="videoContainer">
-                        <video id="ProcVideo" controls>
+                        <video id="ProcVideo" controls poster="images/poster.jpg">
                             <source src="video/process.mp4" />
                             <source src="video/process.ogv" />
                             <source src="video/process.webm" />
